--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@fontsource/manrope": "^5.1.1",
     "@fontsource/roboto": "^5.1.1",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@supabase/supabase-js": "^2.48.1",
     "firebase": "^11.3.1",
+    "lucide-react": "^0.483.0",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
